# The-L-Programming-Lang

./: .gitignore  CMakeLists.txt  README.md  run-compiler.sh
include/ll/lexer/: lexer.h
include/ll/machines/: identifier_machine.h  integer_machine.h  keyword_machine.h  state.h  state_machine.h  token.hpp  whitespace_machine.h
src/: main.cpp
src/lexer/: lexer.cpp
src/machines/: identifier_machine.cpp  integer_machine.cpp  keyword_machine.cpp  state.cpp  state_machine.cpp  whitespace_machine.cpp
